Revision history for {{$dist->name}}

{{$NEXT}}
        - add the ability to say "dzil run --no-build" to run a command without
          building inside the dist dir
          (in other words, no `perl Makefile.PL && make`)
        - Archive::Tar::Wrapper added as a recommended prereq

5.006     2013-11-06 09:21:12 America/New_York
        - add ->is_bytes to files; shortcut for ->encoding eq 'bytes'
          (thanks, David Golden)
        - AutoPrereqs will not try scanning binary files (thanks, David Golden)

5.005     2013-11-02 16:32:04 America/New_York
        - add --keep-build-dir to "dzil test" and "dzil install"

5.004     2013-11-02 09:59:18 America/New_York
        [THIS RELEASE MIGHT BREAK YOUR BUILD]
        - stable release of all the v5 changes below; READ THEM!
        - by default, NextRelease now adds a trial release marker on trial
          releases
        - dzil setup will not echo password during setup

5.003     2013-10-30 08:02:59 America/New_York
        [THIS RELEASE MIGHT BREAK YOUR BUILD]
        - add "dzil --version" support (thanks, Upasana Shukla)
        - fix boneheaded mistake that broke listdeps in 5.002 (thanks, Karen
          Etheridge)

5.002     2013-10-29 10:35:54 America/New_York
        [THIS RELEASE MIGHT BREAK YOUR BUILD]
        - perform encoding steps during listdeps

5.001     2013-10-23 17:40:09 America/New_York
        [THIS RELEASE MIGHT BREAK YOUR BUILD]
        - typo fixes (thanks, David Steinbrunner)

5.000     2013-10-20 08:10:02 America/New_York
        [THIS RELEASE MIGHT BREAK YOUR BUILD]
        - all files now have content, encoded_content, and encoding attributes
        - the Encoding plugin and EncodingProvider role have been added to
          allow you to set the encoding on files; the default is UTF-8
        - config.ini is assumed to be in UTF-8
        - Data::Section sections are assumed to be UTF-8
        - the Term chrome should encode input and output
