@@ -5,6 +5,7 @@ Revision history for {{$dist->name}}
           building inside the dist dir
           (in other words, no `perl Makefile.PL && make`)
         - Archive::Tar::Wrapper added as a recommended prereq
+	- fix :ShareFiles (thanks, Christopher J. Madsen)
 
 5.006     2013-11-06 09:21:12 America/New_York
         - add ->is_bytes to files; shortcut for ->encoding eq 'bytes'
